# LocalGameArchiveManager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GameSaveManager.config.json  README.md  resoutces.qrc
include/zip/: zip.h  zipconf.h
resources/: game.sql  game_archive.sql
src/: AddGame.cpp  AddGame.h  Api.cpp  Api.h  ApplicationInitUtils.cpp  ApplicationInitUtils.h  ElidedLabel.cpp  ElidedLabel.h  FileUtils.cpp  FileUtils.h  Game.h  GameArchive.h  GameArchiveManager.cpp  GameArchiveManager.h  GameArchiveRepository.cpp  GameArchiveRepository.h  GameProcessMonitor.cpp  GameProcessMonitor.h  GameRepository.cpp  GameRepository.h  Login.cpp  Login.h  MainWindow.cpp  MainWindow.h  NetWorkManager.h  NetworkManager.cpp  RandomUtils.cpp  RandomUtils.h  Setting.h  SettingItem.cpp  SettingItem.h  SettingRepository.cpp  SettingRepository.h  SettingVIew.h  SettingView.cpp  Snowflake.cpp  Snowflake.h  SqlUtils.cpp  SqlUtils.h  main.cpp
